Fixed gradle run.